--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*  your css code here. If applicable */
 p1,p3{
 	display: block;
-	font-color: blue ;
+	color: #00f ;
 	background-color:#eee;
 	Font-family: Arial;
 	Font-size: 20px;
