--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-p1,p3{
+.selector{
 	display: block;
 	color: #00f ;
 	background-color:#eee;
@@ -8,7 +8,3 @@ p1,p3{
 	
 }
 
-p2,p4{
-	display: block;
-	padding:10px
-}
